# rust_projects

array_stuff/: Cargo.toml
array_stuff/src/: main.rs  matrix.rs  tests.rs
birthday-problem/: Cargo.toml
birthday-problem/src/: main.rs  tests.rs  utils.rs
coincap_streaming/: Cargo.toml  stream.txt
coincap_streaming/src/: coincapapi.rs  main.rs  utils.rs
guessing_game/src/: main.rs
json_parsing/: Cargo.toml
json_parsing/src/: main.rs
stock_price_simulator/: Cargo.toml  Makefile  viz.R
stock_price_simulator/outputs/: output.csv
stock_price_simulator/src/: cli.rs  file_io.rs  main.rs  simulation.rs
temperatures/src/: main.rs
