[package]
name = "stock_price_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4.3"
csv = "1.1"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
clap = { version = "4.4.7", features = ["derive"] }

[profile.dev]
debug = true

[profile.release]
debug = true
